--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,16 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'com.google.gdata', name: 'core', version: '1.47.1'
 	compile group: 'com.google.api-client', name: 'google-api-client', version: '1.23.0'
-//	compile group: 'com.google.apis', name: 'google-api-services-storage', version: 'v1-rev114-1.23.0'
 	compile group: 'com.google.apis', name: 'google-api-services-drive', version: 'v3-rev61-1.22.0'
 	compile group: 'com.google.guava', name: 'guava', version: '23.0'
+	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
+
+
 
 
 
