--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,9 @@ dependencies {
 	compile group: 'com.google.guava', name: 'guava', version: '23.0'
 	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
-
-
-
+	compile group: 'com.flickr4java', name: 'flickr4java', version: '2.17'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
 
 }
