add check date taken of photo, if upload mark in database

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+    compile group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.11.0'
 
 
 
