--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/flicktogoogle.db;
+spring.datasource.url=jdbc:h2:file:./flicktogoogle;
 spring.datasource.username=sa
 spring.datasource.password=jakiestrudnehaslomalo
 spring.datasource.driver-class-name=org.h2.Driver
